# farmsubsidy-scrapers

./: .gitignore  README.md  cli.py  pyproject.toml
countries/at/: run.py
countries/bg/: README.md
countries/dk/: README.md
countries/fi/: README.md
countries/pl/: pl_scraper.ipynb  pl_scraper_2.ipynb  pl_scraper_3.ipynb
countries/ro/: README.md
scrapy_fs/: README.md  requirements.txt
scrapy_fs/scrapy_fs/: items.py  pipelines.py  settings.py
scrapy_fs/scrapy_fs/spiders/: it_spider.py  nl_spider.py  pl_scheme.json  pl_scraper.py  ro_spider.py  se_spider.py
special-scrapers/: .gitignore  avg_new_files_per_minute.sh  it.js  nl.js  package-lock.json  package.json  runprog.sh
special-scrapers/it_captcha/: captcha.py  pyproject.toml
utils/: download.py
