[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "farmsubsidy-scrapers"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
click = "^8.1.7"
joblib = "^1.4.2"
python = "^3.10"
requests = "^2.32.3"
scrapy = "^2.12.0"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry.scripts]
run = "cli:cli"
